# ferriki

./: .ferriki-export.json  .gitignore  .release-please-config.json  .release-please-manifest.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
adr/: 0001-rust-first-architecture.md  0002-node-workspace-under-node.md  0003-strict-shiki-compat-mirror.md  0004-core-vs-adapter-scope.md  0005-ferroni-stays-external.md  0006-lazy-shiki-asset-loading.md  0007-adapter-integrations-stay-outside-ferriki.md
assets/shiki/: README.md
assets/upstream/: README.md
compat/harness/: README.md  shiki-backend-entry.ts
compat/upstream/: README.md  shiki-core-paths.json
crates/ferriki-asset-gen/: Cargo.toml
crates/ferriki-core/: Cargo.toml  README.md
crates/ferriki-core/src/: asset_catalog.rs  lib.rs
docs/: asset-format.md
docs/migrations/: shiki-workbench-salvage.md
docs/plans/: 2026-03-09-ferriki-asset-pipeline-design.md
node/: eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
node/ferriki/: CHANGELOG.md  LICENSE  README.md  index.d.mts  native.d.mts  package.json
node/scripts/: export-ferriki-repo.mjs  (+2 more)
plans/: ferriki-asset-pipeline-implementation-plan.md  ferriki-phase0-migration-matrix.md  ferriki-remaining-work.md  ferriki-repo-export-boundary.json  ferriki-repo-transition-plan.md  ferriki-rust-first-repo-implementation-plan.md
rfcs/: 0001-twoslash-via-ts7-sidecar.md
scripts/: bootstrap-ferriki-assets-from-shiki-mirror.mjs  export-ferriki-repo.mjs  generate-ferriki-assets.mjs  normalize-exported-ferriki-repo.mjs  sync-textmate-grammars-themes.mjs
(+513 files in other folders)
