[workspace]
members = [
  "crates/ferriki-asset-gen",
  "crates/ferriki-core",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3"
ferroni = "1.2.8"
napi = { version = "3", default-features = false, features = [ "napi8" ] }
napi-build = "2"
napi-derive = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[profile.release]
debug = true
