[workspace]
members = [
  "crates/ferriki-asset-gen",
  "crates/ferriki-core",
]
resolver = "2"

[workspace.dependencies]
bincode = "3.0"
ferroni = "1.2.8"
napi = { version = "2", default-features = false, features = [ "napi8" ] }
napi-build = "2"
napi-derive = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[profile.release]
debug = true
